--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,11 @@
 			<version>7.4.0</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>4.0.0-alpha-1</version>
+		</dependency>
 		</dependencies>
   </project>
