--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,11 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.0.0-alpha-1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>net.sourceforge.tess4j</groupId>
+			<artifactId>tess4j</artifactId>
+			<version>4.2.1</version>
+		</dependency>
 		</dependencies>
   </project>
